// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminNavigation /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bczRLJ gOFXdZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hAZoDl gYvKRI"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 gCaCSq"
    >
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with admin user 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Admin
    </h1>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 gCaCSq"
    >
      <a
        aria-label="Site status"
        class="sc-bjUoiL iXnCrm sc-llJcti cTJlKy admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 FFmcP"
        href="/status"
      >
        <div
          class="sc-idiyUo laTiW"
        >
          <div
            class="sc-dIouRR SXuOK"
          />
          <div
            class="sc-hHLeRK hpzUyW"
          >
            <div
              aria-hidden="true"
              class="sc-iIPllB lkwJJO"
            >
              <div
                class="sc-gicCDI ivioIu date container"
              />
              <div
                class="sc-ezWOiH iIcgvz"
              >
                <h1
                  class="sc-dkzDqf iBtyHU"
                >
                  Site status
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Debug settings"
        class="sc-bjUoiL iXnCrm sc-llJcti cTJlKy admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 FFmcP"
        href="/debug"
      >
        <div
          class="sc-idiyUo laTiW"
        >
          <div
            class="sc-dIouRR SXuOK"
          />
          <div
            class="sc-hHLeRK hpzUyW"
          >
            <div
              aria-hidden="true"
              class="sc-iIPllB lkwJJO"
            >
              <div
                class="sc-gicCDI ivioIu date container"
              />
              <div
                class="sc-ezWOiH iIcgvz"
              >
                <h1
                  class="sc-dkzDqf iBtyHU"
                >
                  Debug settings
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Analytics"
        class="sc-bjUoiL iXnCrm sc-llJcti cTJlKy admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 FFmcP"
        href="/admin/analytics"
      >
        <div
          class="sc-idiyUo laTiW"
        >
          <div
            class="sc-dIouRR SXuOK"
          />
          <div
            class="sc-hHLeRK hpzUyW"
          >
            <div
              aria-hidden="true"
              class="sc-iIPllB lkwJJO"
            >
              <div
                class="sc-gicCDI ivioIu date container"
              />
              <div
                class="sc-ezWOiH iIcgvz"
              >
                <h1
                  class="sc-dkzDqf iBtyHU"
                >
                  Analytics
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Emails"
        class="sc-bjUoiL iXnCrm sc-llJcti cTJlKy admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 FFmcP"
        href="/admin/emails"
      >
        <div
          class="sc-idiyUo laTiW"
        >
          <div
            class="sc-dIouRR SXuOK"
          />
          <div
            class="sc-hHLeRK hpzUyW"
          >
            <div
              aria-hidden="true"
              class="sc-iIPllB lkwJJO"
            >
              <div
                class="sc-gicCDI ivioIu date container"
              />
              <div
                class="sc-ezWOiH iIcgvz"
              >
                <h1
                  class="sc-dkzDqf iBtyHU"
                >
                  Emails
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Notifications"
        class="sc-bjUoiL iXnCrm sc-llJcti cTJlKy admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 FFmcP"
        href="/admin/notifications"
      >
        <div
          class="sc-idiyUo laTiW"
        >
          <div
            class="sc-dIouRR SXuOK"
          />
          <div
            class="sc-hHLeRK hpzUyW"
          >
            <div
              aria-hidden="true"
              class="sc-iIPllB lkwJJO"
            >
              <div
                class="sc-gicCDI ivioIu date container"
              />
              <div
                class="sc-ezWOiH iIcgvz"
              >
                <h1
                  class="sc-dkzDqf iBtyHU"
                >
                  Notifications
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        aria-label="Users"
        class="sc-bjUoiL iXnCrm sc-llJcti cTJlKy admin-navigationstyles__StyledFeatureCard-sc-n2t86e-1 FFmcP"
        href="/admin/users"
      >
        <div
          class="sc-idiyUo laTiW"
        >
          <div
            class="sc-dIouRR SXuOK"
          />
          <div
            class="sc-hHLeRK hpzUyW"
          >
            <div
              aria-hidden="true"
              class="sc-iIPllB lkwJJO"
            >
              <div
                class="sc-gicCDI ivioIu date container"
              />
              <div
                class="sc-ezWOiH iIcgvz"
              >
                <h1
                  class="sc-dkzDqf iBtyHU"
                >
                  Users
                </h1>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with auth error 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bczRLJ gOFXdZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hAZoDl gYvKRI"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 gCaCSq"
    >
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
  <div
    class="sc-crXcEl hTWOhI"
  >
    <h1
      class="sc-hKMtZM juqKJr sc-ksZaOG khzRBV"
      id="this-is-taking-a-while.-maybe-something-isn't-quite-right..."
    >
      This is taking a while. Maybe something isn't quite right...
    </h1>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bczRLJ gOFXdZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hAZoDl gYvKRI"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="admin-navigationstyles__CardContainer-sc-n2t86e-0 gCaCSq"
    >
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
      <div
        class="sc-hAZoDl hnURkf"
      >
        <div
          class="sc-fnykZs hjiMPF"
          style="margin-left: -0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminNavigation /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-crXcEl hTWOhI"
    >
      <h1
        class="sc-dkzDqf iBtyHU sc-ksZaOG dCXhIJ"
        id="admin-only"
      >
        Admin only
      </h1>
      <span
        class="sc-gXmSlM jypTEh"
      >
        You need to be logged in with an admin account to view this content.
        <br />
        <a
          class="sc-ftvSup bvTsjB"
          href="/login"
        >
          Got a different admin account? Log in here.
        </a>
      </span>
    </div>
  </div>
</div>
`;
